1.0.17
Issue #1494 Creating another container based on existing artifact
Add additional information when publishing through dev Endpoint (instead of just Unprocessible Entity)
Issue #1530 Not able to Run-AlValidation without previous app.
Issue #1537 Issue with file lock when creating image

1.0.16
Issue #1516 Sort-AppFoldersByDependencies can't handle twice the same app in the baseFolder
Issue #1519 Extract-AppFileToFolder doesn't extract internalsVisibleTo in app.json
Add parameter -SkipUpgrade to allow Run-AlValidation to skip upgrade if previousApps cannot be installed on current version
Issue #1522 Move files to correct positions
Issue #1517 Traefik with Run-AlValidation
Add Text to Run-AlValidation to indicate success or failure

1.0.15
Use new Generic image location and SQL 2019 image as default (mcr.microsoft.com/businesscentral:{0}-0.1.0.25 is the latest with SQL 2017)
Issue #1469 Install-NavSipCryptoProvider cannot be executed twice
Add new function UploadImportAndApply-ConfigPackageInBcContainer, which uses management APIs to Upload, Import and Apply a config package in a container
Add parameter -ImportTestDataInBcContainer in Run-AlPipeline to allow for overriding and supporting test data
Add configuration setting: timeStampServer (default timeStampServer for Sign-AppInBcContainer)
Add parameter timeStampServer to Sign-AppInBcContainer to allow overriding the timeStampServer
Fix Extract-AppFileToFolder to include missing properties and honor runtime version
Add parameter vsixFile to Run-AlPipeline
Add new function Run-AlCops to run AL cops in existing container
Add new function Run-AlValidation to run and end 2 end AL validation with multiple versions and multiple countries
Issue #1507 Sort-AppFilesByDependencies crashes if two different versions of the same app is specified
Issue #1496 Add ruleset parameter to Run-AlPipeline
Added new function Get-AlLanguageExtensionFromArtifacts to get path of .vsix file within artifacts