@@ -31,6 +31,34 @@ function Get-ContainerHelperConfig {
             "defaultContainerName" = "bcserver"
             "timeStampServer" = "http://timestamp.verisign.com/scripts/timestamp.dll"
             "sandboxContainersAreMultitenantByDefault" = $true
+            "mapCountryCode" = [PSCustomObject]@{
+                "ae" = "w1"
+                "br" = "w1"
+                "co" = "w1"
+                "ee" = "w1"
+                "fo" = "dk"
+                "gl" = "dk"
+                "hk" = "w1"
+                "hr" = "w1"
+                "hu" = "w1"
+                "id" = "w1"
+                "ie" = "w1"
+                "jp" = "w1"
+                "kr" = "w1"
+                "lt" = "w1"
+                "lv" = "w1"
+                "my" = "w1"
+                "pe" = "w1"
+                "ph" = "w1"
+                "pl" = "w1"
+                "rs" = "w1"
+                "sg" = "w1"
+                "si" = "w1"
+                "th" = "w1"
+                "tw" = "w1"
+                "vn" = "w1"
+                "za" = "w1"
+            }
         }
         $bcContainerHelperConfigFile = Join-Path $bcContainerHelperConfig.HostHelperFolder "BcContainerHelper.config.json"
         if (Test-Path $bcContainerHelperConfigFile) {
