@@ -3,6 +3,11 @@ Issue #1494 Creating another container based on existing artifact
 Add additional information when publishing through dev Endpoint (instead of just Unprocessible Entity)
 Issue #1530 Not able to Run-AlValidation without previous app.
 Issue #1537 Issue with file lock when creating image
+Use configured containerName in Run-AlCops and Run-AlValidation
+Add parameter -skipAppSourceCop to Run-AlValidation
+Add mapCountryCode to $bcContainerHelperConfig
+Use mapCountryCode in Get-BcArtifactUrl to allow getting artifacts for countries which doesn't have own artifacts
+Use mapCountryCode in Run-AlValidation to allow running validation for all countries (max. 1 time per artifact)
 
 1.0.16
 Issue #1516 Sort-AppFoldersByDependencies can't handle twice the same app in the baseFolder
